--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website Layout</title>
+    <title>Oops! The Website is down.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,17 +43,16 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Oops! The Website is down.</h1>
     </header>
   
     <main>
-        <h2>About Us</h2>
-        <p>This is a basic website layout created using HTML and CSS. Feel free to customize it as per your needs.</p>
-        <h2>Our Services</h2>
-        <p>We offer a variety of services to cater to your requirements. Explore more by navigating through the website.</p>
+        <h2>Why am I seeing this?</h2>
+        <p>Because the admin is too lazy to make anything worthy.</p>
+        
     </main>
     <footer>
-        <p>&copy; 2025 My Website. All Rights Reserved.</p>
+        <p>&copy; 2025 dBishab. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
