--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="TITLE.JPG">
     <style>
-    <style>
         body {
             font-family: 'Poppins', sans-serif;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
             background: #D3D3D3;
             color: #000;
+        }
+
+        .container {
+            text-align: center;
         }
 
         h1 {
@@ -35,6 +37,7 @@
             background: rgba(0, 0, 0, 0.05);
             border-radius: 10px;
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+            margin: 0 auto; /* Center the board within the container */
         }
 
         .cell {
@@ -43,12 +46,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #1c1a1a; /* Dark off-white */
-            border: 2px solid #87CEEB; /* Sky Blue */
+            background: #1c1a1a;
+            border: 2px solid #87CEEB;
             border-radius: 10px;
             font-size: 3rem;
             font-weight: bold;
-            color: #ffffff; /* White text */
+            color: #ffffff;
             text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.7);
             cursor: pointer;
             transition: all 0.3s ease;
@@ -68,7 +71,6 @@
             margin-top: 20px;
             font-size: 1.5rem;
             font-weight: bold;
-            text-align: center;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
 
@@ -77,28 +79,22 @@
             padding: 12px 30px;
             font-size: 1rem;
             font-weight: bold;
-            background: #FFA07A; /* Light Salmon */
+            background: #FFA07A;
             color: #000;
             border: none;
             border-radius: 8px;
             cursor: pointer;
             transition: background 0.3s ease;
-            display: block;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
         }
 
         .refresh:hover {
-            background: #FF7F50; /* Coral */
+            background: #FF7F50;
         }
-
     </style>
-        <script defer src="https://cdn.overtracking.com/t/tT0cTlB9tBEBPsRz9/"></script>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    <div>
+    <div class="container">
+        <h1>Tic Tac Toe</h1>
         <div class="board" id="board"></div>
         <div class="message" id="message"></div>
         <button class="refresh" onclick="location.reload()">Play Again</button>
@@ -222,3 +218,4 @@
     </script>
 </body>
 </html>
+
