--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="TITLE.JPG">
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Fira Sans Condensed', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
