--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column; /* Allow vertical stacking */
+            flex-direction: column;
             height: 100vh;
             margin: 0;
             background: #D3D3D3;
@@ -21,7 +21,7 @@
 
         .container {
             text-align: center;
-            width: 90%; /* Prevent content from stretching too much */
+            width: 90%;
         }
 
         h1 {
@@ -32,12 +32,12 @@
 
         .board {
             display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 columns for Tic-Tac-Toe */
+            grid-template-columns: repeat(3, 1fr);
             gap: 10px;
-            width: 90vmin; /* Keep the board responsive to screen size */
-            max-width: 400px; /* Ensure the board doesn't grow too large */
-            aspect-ratio: 1; /* Maintain a square board */
-            margin: 0 auto; /* Center the board */
+            width: 90vmin;
+            max-width: 400px;
+            aspect-ratio: 1;
+            margin: 0 auto;
             background: rgba(0, 0, 0, 0.05);
             padding: 10px;
             border-radius: 10px;
@@ -45,15 +45,15 @@
         }
 
         .cell {
-            width: 100%; /* Full width of the grid cell */
-            aspect-ratio: 1; /* Maintain square tiles */
+            width: 100%;
+            aspect-ratio: 1;
             display: flex;
             justify-content: center;
             align-items: center;
             background: #1c1a1a;
             border: 2px solid #87CEEB;
             border-radius: 10px;
-            font-size: calc(1.5vmin + 1rem); /* Responsive font size */
+            font-size: calc(1.5vmin + 1rem);
             font-weight: bold;
             color: #ffffff;
             text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.7);
@@ -73,7 +73,7 @@
 
         .message {
             margin-top: 20px;
-            font-size: calc(1rem + 1vmin); /* Responsive font size */
+            font-size: calc(1rem + 1vmin);
             font-weight: bold;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
@@ -101,6 +101,13 @@
             font-weight: bold;
             color: #333;
         }
+
+        .ip-address {
+            margin-top: 10px;
+            font-size: 1rem;
+            font-weight: bold;
+            color: #000;
+        }
     </style>
     <script defer src="https://cdn.overtracking.com/t/tR4ZbKNSQ1bQg6uO2/"></script>
 </head>
@@ -111,15 +118,30 @@
         <div class="message" id="message"></div>
         <button class="refresh" onclick="location.reload()">Play Again</button>
         <div class="code" id="code"></div>
+        <div class="ip-address" id="ip-address">Your IP Address: Fetching...</div>
     </div>
 
     <script>
         const board = document.getElementById('board');
         const message = document.getElementById('message');
         const codeElement = document.getElementById('code');
+        const ipAddressElement = document.getElementById('ip-address');
         const cells = Array(9).fill(null);
         let isPlayerTurn = true;
         const generatedCodes = new Set();
+
+        // Fetch and display the user's IP address
+        async function fetchIpAddress() {
+            try {
+                const response = await fetch('https://api.ipify.org?format=json');
+                const data = await response.json();
+                ipAddressElement.textContent = `Your IP Address: ${data.ip}`;
+            } catch (error) {
+                ipAddressElement.textContent = 'Unable to fetch IP Address.';
+            }
+        }
+
+        fetchIpAddress();
 
         // Random 16-character code generator
         function generateCode() {
@@ -130,7 +152,7 @@
                     .fill(null)
                     .map(() => chars.charAt(Math.floor(Math.random() * chars.length)))
                     .join('');
-                code = code.match(/.{1,4}/g).join('-'); // Format as XXXX-XXXX-XXXX-XXXX
+                code = code.match(/.{1,4}/g).join('-');
             } while (generatedCodes.has(code));
             generatedCodes.add(code);
             return code;
